сервис проверки обновлений переделан на wss. Вариант с SOAP не прокатил из за необходимости использовать сертификат на стороне java

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -67,6 +67,7 @@ NeedUpdatePage=Please update page!
 NO_LOAD_DATA=There is no data to download
 UsersIsLoadAndUpdate=Users is loaded and updated
 ConnectFailed=Failed to connect!
+ConnectServerFailed=Connect server failed!
 ConnectionEstablished=The connection is established!
 YouExitFromProgramm=You exit from programm
 ERR_LOGIN_CREDENTIALS=Invalid credentials user
