сообщения, право на создание, обозреватель объектов, карточка права

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -162,8 +162,8 @@ RightsState=Rights for state
 RightsFolder=Folder rights
 RightsDoc=Documents rights
 RightsFor=Rights for:
-ForUser=For user
-ForGroup=For group
+ForUser=for user
+ForGroup=for group
 DataNoSave=Data is not saved!
 PressSaveOrCancel=Click the 'Back' button to go back or click 'Exit' to exit without saving changes.
 Exit=Exit
@@ -655,7 +655,7 @@ TypeFilledGroup=The group members filled in
 InPropertiesGroup=in the properties group
 InCardObject=in the card object
 SystemRoleName=The system name of the role
-ForRole=For role
+ForRole=for role
 Administrator=Administrator
 Administrators=Administrators
 RightForRole=Rights for role
@@ -775,3 +775,6 @@ Case=Case
 AutoFillDocuments=AutoFill documents
 Inherit=Inherit
 Sessions=Sessions
+AvailableStates=Available states
+RrightsAreSet=These rights are set
+UserMustChangePassword=The user must change the password!
