--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -183,3 +183,4 @@ WillBeDeleted={0} records will be deleted
 Saved=Saved!
 LicenseExpired=The term of the license {0} expires {1}! Access will be blocked after {2} days!
 UpdateInformation=Information about the extension
+YouNeedChangePassword=You need to change your password!
