сообщения, право на создание, обозреватель объектов, карточка права

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -632,7 +632,7 @@ System=System
 DuplicateMessagesEmail=Duplicate messages e-mail
 NoNewMessages=No new messages
 ReadIs=Read
-CountNewMessages=new messages
+CountNewMessages=New messages
 OnMyEdit=On my edit
 SetLockAndEdit=SetLock and start edit file
 OneTimeStartup=One-time startup
@@ -778,3 +778,6 @@ Sessions=Sessions
 AvailableStates=Available states
 RrightsAreSet=These rights are set
 UserMustChangePassword=The user must change the password!
+AllMessages=All messages
+Refuse=Refuse
+DefaultFolder=Default folder
