--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -184,3 +184,5 @@ Saved=Saved!
 LicenseExpired=The term of the license {0} expires {1}! Access will be blocked after {2} days!
 UpdateInformation=Information about the extension
 YouNeedChangePassword=You need to change your password!
+CardSaved=Card saved
+ChangesSaved=The changes are saved!
