серьёзная доработка прав доступа в карточках: сделано инплейс редактирование прав доступа!

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -160,7 +160,7 @@ DateEvent=Event date
 State=State
 RightsState=Rights for state
 RightsFolder=Folder rights
-RightsDoc=Documents rights
+RightsDoc=Access rights to the documents
 RightsFor=Rights for:
 ForUser=for user
 ForGroup=for group
@@ -781,3 +781,23 @@ UserMustChangePassword=The user must change the password!
 AllMessages=All messages
 Refuse=Refuse
 DefaultFolder=Default folder
+CreateDocuments=Create documents
+CreateSubfolders=Create subfolders
+AddDetailRight=Add details
+CreateUsers=Create users
+CreatePartners=Create partners
+CreateDepartaments=Create departaments
+CreateStaffs=Create staffs
+ForSomeone=For someone
+Roles=Roles
+UserNotSet=The user is not specified!
+RightsCompany=Access rights to the company
+RightsDepartments=Access to an departments
+RightsForDoc=Access rights to the document
+RightsForPartner=Access rights to the partner
+RightsForStaff=Access rights to the staff
+RightsForUserGroup=Access rights to the user group
+RightsForUser=Access rights to the user
+RightsDepartment=Access to an department
+RightsStaffs=Access rights to the staffs
+RightsDocTypes=Access rights to the types of documents
