--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -159,7 +159,7 @@ DocumentWilBeAutomaticallyUnlocked=The document will be automatically unlocked "
 YouHaveUnreadMessage=You have a new unread message (''{0}'')!
 NoNewMessages=No new messages
 RequiresProtocolInstallation=This action requires a protocol installation. Select OK to download the protocol installer.
-RightAddChildsNo=You do not have rights to add childs for object ''{0}''!
+RightAddChildsNo=You do not have rights to add ''{1}'' for object ''{0}''!
 StatusesNotFound=Statuses for load not found!
 AccessDeniedAddChilds=You can not add child object for ''{0}''!
 PatternIsEmpty=Pattern is empty!
@@ -186,3 +186,7 @@ UpdateInformation=Information about the extension
 YouNeedChangePassword=You need to change your password!
 CardSaved=Card saved
 ChangesSaved=The changes are saved!
+UserNotSet=The user is not specified!
+UserGroupNotSet=User group is not specified!
+RoleNotSet=Role not specified!
+RightAddDetailsNo=You do not have rights to add object ''{1}'' for object ''{0}''!
