серьёзная доработка прав доступа в настройках объектов: сделано инплейс редактирование прав доступа, сделано редактирование состояний объектов

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -801,3 +801,6 @@ RightsForUser=Access rights to the user
 RightsDepartment=Access to an department
 RightsStaffs=Access rights to the staffs
 RightsDocTypes=Access rights to the types of documents
+SelectedStates=Selected states
+ObjectStates=Object states
+SettigsObjects=Setting objects
