--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -166,7 +166,7 @@ PatternIsEmpty=Pattern is empty!
 CantDeleteStartState=Cant delete start state!
 StartSateIsChange=Start sate is change!
 StateIsAdd=State is added!
-CantRemoveUsedState=Cant remove used state!
+CantRemoveUsedState=Cant remove used state ''{0}''!
 PasteCopiedObjectDone=Paste the copied object is done!
 SelectedFolderCantNotAddDocs=In the selected folder, user cannot add documents!
 TestMailInbox=The connection to the server {0} is established. In the mailbox contained {1} message(s). {2} of them are unread.
