серьёзная доработка прав доступа в настройках объектов: сделано инплейс редактирование прав доступа, сделано редактирование состояний объектов

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -689,7 +689,7 @@ EditVersion=Edit version
 Licensor=Licensor
 AgreeLicenseConfirm=Accept the license agreement
 AcceptAndClose=Accept license and close form
-LicenceStandartType=Standart
+Licence.StandartType=Standart
 NavigatorBar=Navigation bar
 MarkAllAsRead=Mark all records as read
 SearcheDateDoc=Searche for date document
@@ -804,3 +804,5 @@ RightsDocTypes=Access rights to the types of documents
 SelectedStates=Selected states
 ObjectStates=Object states
 SettigsObjects=Setting objects
+Activate=Activate
+ProgramActivated=Program activated!
