--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -190,3 +190,5 @@ UserNotSet=The user is not specified!
 UserGroupNotSet=User group is not specified!
 RoleNotSet=Role not specified!
 RightAddDetailsNo=You do not have rights to add object ''{1}'' for object ''{0}''!
+ComputerMastConnectToInternet=Your computer must be connected to the Internet!
+ApplicationIsActivate=The program is successfully activated!
