--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -122,7 +122,7 @@ RightNotInherits=Right not inherits
 DepartamentUsed=Departament ''{0}'' is used!
 PartnerTypesUsed=Partner types ''{0}'' is used!
 UserUsedInStaffs=User ''{0}'' used in staffs!
-CompanyUsedInDepartaments=Company ''{0}'' used in departaments
+CompanyUsedInDepartaments=Company ''{0}'' used in departaments!
 AccessDeniedEdit=Access denied edit object ''{0}''
 AddObjectToGroupComplete=Object ''{0}'' add to group ''{1}'' completed!
 NoCheckedItems=No checked items!
@@ -192,3 +192,5 @@ RoleNotSet=Role not specified!
 RightAddDetailsNo=You do not have rights to add object ''{1}'' for object ''{0}''!
 ComputerMastConnectToInternet=Your computer must be connected to the Internet!
 ApplicationIsActivate=The program is successfully activated!
+CompanyUsedInStaffs=Company ''{0}'' used in staffs!
+ImpossibleRemove=It is impossible to remove!
