Доработка замены объектов и мелкие косяки

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -111,7 +111,7 @@ ObjectAlreadyAddedFavorites=The object ''{0}'' has already been previously added
 DeletedDocStatus=Was removed document status: {0}
 ChangeDocStatus=Was change document status: {0}
 StatusesLoadComplete=Loaded {0} rows.
-ReplaceCompleted=Replace completed!
+ReplaceCompleted=Replace completed! Performed {0} replacements.
 DoNotSpecifyValueReplacement=Do not specify a value for replacement!
 PostUsedInStaffs=Post {0} used in staffs
 DocTypeUsedInFolders=Doc type {0} used in folders
