доработки в lazy загрузчике

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -194,3 +194,4 @@ ComputerMastConnectToInternet=Your computer must be connected to the Internet!
 ApplicationIsActivate=The program is successfully activated!
 CompanyUsedInStaffs=Company ''{0}'' used in staffs!
 ImpossibleRemove=It is impossible to remove!
+Welcom=Welcome to the program ESCOM-BPM WEB! Reference information on working with the program You can get by clicking on <Help>
