изменение в наследовании - добавлен lazy бин и удалён basebean доработана форма списка спочтовых сообщений и форма сообщения

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -92,7 +92,7 @@ PasswordIncorrect=The current password is not correct!
 PasswordIsChange=Password change!
 UsedLDAPauth=You use authentication through LDAP. To change the password, contact your LDAP administrator
 SeparatedMultipleAddresses=Multiple addresses must be separated by a comma!
-MessageSaveAndPutInMailBoxService=Message save and put in mailbox service
+MessageSaveAndPutInMailBoxService=Message for ''{0}'' is save and put in mailbox service!
 NO_SELECT_DOCS=No selected documents!
 IncorrectMailAdress=Incorrect e-mail adress!
 MessageSent=The message sent to ''{0}''!
