Созданы классы для процесса

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -806,3 +806,11 @@ ObjectStates=Object states
 SettigsObjects=Setting objects
 Activate=Activate
 ProgramActivated=Program activated!
+Running=Running
+Process=Process
+Processes=Processes
+ProcessSelector=Process selector
+SchemeConcord=Scheme of document approval
+ProcessType=Type process
+ProcessesTypes=Types processes
+\u0421ompleted=\u0421ompleted
