доработки всякие, поручение создано и модель процесса

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -814,3 +814,11 @@ SchemeConcord=Scheme of document approval
 ProcessType=Type process
 ProcessesTypes=Types processes
 \u0421ompleted=\u0421ompleted
+MonitorConcorded=Monitor concorded
+Task=Task
+Tasks=Tasks
+Cancelled=Cancelled
+RightsProcesses=Access rights for processes
+CreateTypeProcess=Create type process
+CreateTypeProcesses=Create type processes
+CreateProcesses=Create processes
