--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -195,3 +195,4 @@ ApplicationIsActivate=The program is successfully activated!
 CompanyUsedInStaffs=Company ''{0}'' used in staffs!
 ImpossibleRemove=It is impossible to remove!
 Welcom=Welcome to the program ESCOM-BPM WEB! Reference information on working with the program You can get by clicking on <Help>
+StartStateNotPresentinListsStates=The starting state ''{0}'' is not in the list of object States!
