--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -827,3 +827,6 @@ AddTask=Add task
 NotAssigned=Not assigned!
 AddLogicElement=Add logic element
 Add\u0421ondition=Add condition
+addExecutors=Add executors
+And=And
+Or=Or
