доработки по модели процесса

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -193,7 +193,7 @@ RightAddDetailsNo=You do not have rights to add object ''{1}'' for object ''{0}'
 ComputerMastConnectToInternet=Your computer must be connected to the Internet!
 ApplicationIsActivate=The program is successfully activated!
 CompanyUsedInStaffs=Company ''{0}'' used in staffs!
-ImpossibleRemove=It is impossible to remove!
+ImpossibleRemove=It is impossible to remove object ''{0}''!
 Welcom=Welcome to the program ESCOM-BPM WEB! Reference information on working with the program You can get by clicking on <Help>
 StartStateNotPresentinListsStates=The starting state ''{0}'' is not in the list of object States!
 WorkflowIncorrectData=Incorrect workflow route data!
