--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -831,3 +831,6 @@ addExecutors=Add executors
 And=And
 Or=Or
 ActivateLicense=Activate license
+AddCondition=Add condition
+Properties=Properties
+AddTasks=Add tasks
