--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -835,3 +835,8 @@ AddCondition=Add condition
 Properties=Properties
 AddTasks=Add tasks
 Scheduler=Scheduler
+Anchor=Anchor
+Logic=\u0421onditional branching
+\u0421onnector=\u0421onnector
+Condition=Condition
+PlanEndDate=Planned execution date
