--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -428,7 +428,7 @@ Copies=Copies
 SMTPport=SMTP port
 AdressSender=Email sender
 AdressRecipient=Adress recipient
-Services=Services
+Services=System services
 MessageSent=Message sent
 MessagesForSent=Messages for sent
 MessagesBox=Messages box
@@ -840,3 +840,5 @@ Logic=\u0421onditional branching
 \u0421onnector=\u0421onnector
 Condition=Condition
 PlanEndDate=Planned execution date
+ServiceNotification=Service notification
+GoToTask=Go to task
