--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -842,3 +842,6 @@ Condition=Condition
 PlanEndDate=Planned execution date
 ServiceNotification=Service notification
 GoToTask=Go to task
+GoToProcess=Go to process
+AddEnter=Add enter
+AddExit=Add exit
