--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -22,7 +22,7 @@ ResolutionSavedProcessing=Resolution saved and queued for processing
 ErrorSQLConnectDetail=When connecting to SQL server error occurred. 
 ErrorSQLConnect=The SQL server is not available.
 ErrorCountLogin=Exceeded the number of login attempts to the system! The log will be locked for 1 minutes.
-ErrorSaveRecord=\u041F\u0440\u0438 \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u0438 \u0437\u0430\u043F\u0438\u0441\u0438 \u0432\u043E\u0437\u043D\u0438\u043A\u043B\u0430 \u043E\u0448\u0438\u0431\u043A\u0430
+ErrorSaveRecord=\u041f\u0440\u0438 \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u0438 \u0437\u0430\u043f\u0438\u0441\u0438 \u0432\u043e\u0437\u043d\u0438\u043a\u043b\u0430 \u043e\u0448\u0438\u0431\u043a\u0430
 Warning=Warning!
 InfoFolderIsModerated=The selected folder is moderated
 InfoCreateDocInFolder=The document will be displayed in the folder only after it is processed by the server system ESCOM.BPM
@@ -87,7 +87,7 @@ LoadedDocHelp=If document download does not start automatically, click on this l
 FileNotFound=File not found!
 DocumentNotFound=Document not found!
 PasswordsNotMatch=Passwords do not match!
-#\u041F\u0430\u0440\u043E\u043B\u044C \u043D\u0435 \u0432\u0435\u0440\u043D\u044B\u0439!
+#\u041f\u0430\u0440\u043e\u043b\u044c \u043d\u0435 \u0432\u0435\u0440\u043d\u044b\u0439!
 PasswordIncorrect=The current password is not correct!
 PasswordIsChange=Password change!
 UsedLDAPauth=You use authentication through LDAP. To change the password, contact your LDAP administrator
@@ -197,3 +197,7 @@ ImpossibleRemove=It is impossible to remove object ''{0}''!
 Welcom=Welcome to the program ESCOM-BPM WEB! Reference information on working with the program You can get by clicking on <Help>
 StartStateNotPresentinListsStates=The starting state ''{0}'' is not in the list of object States!
 WorkflowIncorrectData=Incorrect workflow route data!
+LinkProcessIncorrect=The link to the process is incorrect. It is possible that the process has been deleted.
+ProcessNotContainDoc=The process ''{0}'' does not contain a document!
+DiagramNotHaveExit=The diagram does not specify a process exit!
+DiagramNotHaveStart=The diagram does not indicated the beginning of the process!
