--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -201,3 +201,4 @@ LinkProcessIncorrect=The link to the process is incorrect. It is possible that t
 ProcessNotContainDoc=The process ''{0}'' does not contain a document!
 DiagramNotHaveExit=The diagram does not specify a process exit!
 DiagramNotHaveStart=The diagram does not indicated the beginning of the process!
+DiagramNotHaveConnectors=Diagram not have a connectors!
