--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -208,8 +208,8 @@ MustBeFilled=must be filled in
 ObjectCreate=Object is created
 ObjectModified=object was modified
 Actual=Actual
-ActualInfo=The object is available in the screen forms
-NoActualInfo=The object is not available in the screen forms
+ActualInfo=The object will be displayed in the screen forms
+NoActualInfo=The object will not be displayed in the screen forms
 NoActual=Not relevant
 Companies=Company
 Company=Company
@@ -853,3 +853,6 @@ Overdue=Overdue
 Remained=Remained
 On=on
 NotStarted=not started
+Maximize=Maximize
+Minimize=Minimize
+InterruptionProcess=The interruption of the process
