--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -202,3 +202,7 @@ ProcessNotContainDoc=The process ''{0}'' does not contain a document!
 DiagramNotHaveExit=The diagram does not specify a process exit!
 DiagramNotHaveStart=The diagram does not indicated the beginning of the process!
 DiagramNotHaveConnectors=Diagram not have a connectors!
+ConfirmInterruptionProcess=You interrupt the process that is currently running! Confirm your action!
+TasksNoHaveDeadline=Not all tasks have a deadline!
+ProcessSuccessfullyLaunched=The process was successfully launched!
+ProcessExecutionInterrupted=The execution of the process interrupted!
