--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -856,3 +856,17 @@ NotStarted=not started
 Maximize=Maximize
 Minimize=Minimize
 InterruptionProcess=The interruption of the process
+Done=Done
+Execution=Execution
+Comment=Comment
+Results=Results
+Agreed=Agreed
+AgreedWithComments=Agreed with the comments
+Refused=Refused
+AvailableResults=Available results
+Selected=Selected
+ListResults=Result list
+Reminder=Reminder
+Remark=Remark
+ActualEndDate=Actual end date
+DateAppointment=Date of appointment
