--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -206,3 +206,5 @@ ConfirmInterruptionProcess=You interrupt the process that is currently running! 
 TasksNoHaveDeadline=Not all tasks have a deadline!
 ProcessSuccessfullyLaunched=The process was successfully launched!
 ProcessExecutionInterrupted=The execution of the process interrupted!
+ErrorUnpackingProcessDiagram=Error unpacking process diagram!
+TaskNoHaveListResult=No result list is set for the task!
