--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -870,3 +870,7 @@ Reminder=Reminder
 Remark=Remark
 ActualEndDate=Actual end date
 DateAppointment=Date of appointment
+AllTasksFinished=All tasks finished?
+EveryoneApproved=Everyone approved?
+Caption=Caption
+ChangeDocState=Document change state
