--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -208,3 +208,6 @@ ProcessSuccessfullyLaunched=The process was successfully launched!
 ProcessExecutionInterrupted=The execution of the process interrupted!
 ErrorUnpackingProcessDiagram=Error unpacking process diagram!
 TaskNoHaveListResult=No result list is set for the task!
+IncorrectConditionRouteProcess=An incorrect condition in the route process!
+ProcedureSettingStateContainsIncorrectValue=The document state setting procedure contains an incorrect value!
+StateProcessRouteNotFound=The state specified in the process route was not found in the database!
