--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -874,3 +874,13 @@ AllTasksFinished=All tasks finished?
 EveryoneApproved=Everyone approved?
 Caption=Caption
 ChangeDocState=Document change state
+???=???
+BundleKey=BundleKey
+SetDocStatus=Set status for document 
+IsPartnerConcorderDocument=Is document sign from partner
+DocHasBeenRejected=The document has been rejected
+IsDocConcordedWithRemerks=The document is concorded with the remarks
+ElementExit=Element 'Exit from process'
+CompletePprocess=Complete the process?
+StartProcess=Start process
+ProcessCaption=Process caption
