--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -211,3 +211,5 @@ TaskNoHaveListResult=No result list is set for the task!
 IncorrectConditionRouteProcess=An incorrect condition in the route process!
 ProcedureSettingStateContainsIncorrectValue=The document state setting procedure contains an incorrect value!
 StateProcessRouteNotFound=The state specified in the process route was not found in the database!
+IncorrectLinkProcess=Incorrect link to the process!
+InternalErrorRunningProcess=An internal error occurred while running the process
