--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -212,4 +212,5 @@ IncorrectConditionRouteProcess=An incorrect condition in the route process!
 ProcedureSettingStateContainsIncorrectValue=The document state setting procedure contains an incorrect value!
 StateProcessRouteNotFound=The state specified in the process route was not found in the database!
 IncorrectLinkProcess=Incorrect link to the process!
-InternalErrorRunningProcess=An internal error occurred while running the process
+InternalErrorRunningProcess=An internal error occurred while running the process!
+InternalErrorSavingTask=An internal error occurred while saving the task!
