--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -884,3 +884,4 @@ ElementExit=Element 'Exit from process'
 CompletePprocess=Complete the process?
 StartProcess=Start process
 ProcessCaption=Process caption
+TermApproval=Term of approval
