--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -214,3 +214,4 @@ StateProcessRouteNotFound=The state specified in the process route was not found
 IncorrectLinkProcess=Incorrect link to the process!
 InternalErrorRunningProcess=An internal error occurred while running the process!
 InternalErrorSavingTask=An internal error occurred while saving the task!
+DeadlineSpecifiedInPastTime=The deadline is specified in the past time!
