--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -885,3 +885,4 @@ CompletePprocess=Complete the process?
 StartProcess=Start process
 ProcessCaption=Process caption
 TermApproval=Term of approval
+HourShort=h.
