--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -215,3 +215,5 @@ IncorrectLinkProcess=Incorrect link to the process!
 InternalErrorRunningProcess=An internal error occurred while running the process!
 InternalErrorSavingTask=An internal error occurred while saving the task!
 DeadlineSpecifiedInPastTime=The deadline is specified in the past time!
+DeadlineIncorrect=The deadline is incorrect!
+TaskExecTimeLongerThanProcessDeadLine=Task execution time is longer than the process deadline!
