--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -886,3 +886,10 @@ StartProcess=Start process
 ProcessCaption=Process caption
 TermApproval=Term of approval
 HourShort=h.
+Once=Once
+Single=Single
+ReminderAssigningEvent=Reminder when assigning a task
+Before=Before
+EveryWeek=Every week
+EveryDay=Every day
+BeforeDeadline=before the deadline
