--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -371,13 +371,13 @@ IntervalRunService=Interval run service
 IntervalTypeRunService=Type of interval run service
 Day=Day
 StartInDate=Start in date
-Monday=Monday
-Tuesday=Tuesday
-Wednesday=Wednesday
-Thursday=Thursday
-Friday=Friday
-Saturday=Saturday
-Sunday=Sunday
+MONDAY=Monday
+TUESDAY=Tuesday
+WEDNESDAY=Wednesday
+THURSDAY=Thursday
+FRIDAY=Friday
+SATURDAY=Saturday
+SUNDAY=Sunday
 StartIn=To start in
 Duration=Duration
 DayShort=Days
@@ -893,3 +893,7 @@ Before=Before
 EveryWeek=Every week
 EveryDay=Every day
 BeforeDeadline=before the deadline
+Days=Days
+Time=Time
+ProcessStarted=The process started
+Process\u0421anceled=Process canceled
