--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -217,3 +217,6 @@ InternalErrorSavingTask=An internal error occurred while saving the task!
 DeadlineSpecifiedInPastTime=The deadline is specified in the past time!
 DeadlineIncorrect=The deadline is incorrect!
 TaskExecTimeLongerThanProcessDeadLine=Task execution time is longer than the process deadline!
+YouReceivedNewTask=You received a new task
+ReminderPeriodIncorrect=The reminder period is incorrect!
+ReminderTimeNotSet=Not set the reminder time!
