--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -897,3 +897,5 @@ Days=Days
 Time=Time
 ProcessStarted=The process started
 Process\u0421anceled=Process canceled
+AtTime=at
+NextReminder=Next reminder
