--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -220,3 +220,4 @@ TaskExecTimeLongerThanProcessDeadLine=Task execution time is longer than the pro
 YouReceivedNewTask=You received a new task
 ReminderPeriodIncorrect=The reminder period is incorrect!
 ReminderTimeNotSet=Not set the reminder time!
+TaskCancelled=Task cancelled
