Напоминание в карточке задачи

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -221,3 +221,4 @@ YouReceivedNewTask=You received a new task
 ReminderPeriodIncorrect=The reminder period is incorrect!
 ReminderTimeNotSet=Not set the reminder time!
 TaskCancelled=Task cancelled
+CopyingObjectsTypeNotProvided=Copying of objects of this type is not provided!
