Доработка форм обозревателей

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -899,3 +899,6 @@ ProcessStarted=The process started
 Process\u0421anceled=Process canceled
 AtTime=at
 NextReminder=Next reminder
+ProcessExecutionControl=Process execution control
+Initiator=Initiator
+TermExecution=Term of execution
