Доработка форм обозревателей

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -222,3 +222,4 @@ ReminderPeriodIncorrect=The reminder period is incorrect!
 ReminderTimeNotSet=Not set the reminder time!
 TaskCancelled=Task cancelled
 CopyingObjectsTypeNotProvided=Copying of objects of this type is not provided!
+ObjectWithIDNotFound=Object ID ''{0}'' not found! It is possible that it was removed from the database.
