Доработка форм обозревателей

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -64,7 +64,7 @@ ConfirmAction=Confirmation
 ChangeConcorder=The replacement person responsible
 Resolution=The resolution to the document
 ChangeDatePlan=The change of period of performance
-ReportExe=Performance report
+ReportExe=Execution report
 ConfirmExeTask=Confirmation of job completion
 ChangeDateConcord=Changing the term of approval
 bundle.EmptyField=Field must be filled!
@@ -902,3 +902,4 @@ NextReminder=Next reminder
 ProcessExecutionControl=Process execution control
 Initiator=Initiator
 TermExecution=Term of execution
+ReportsExe=Execution reports
