--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -223,3 +223,8 @@ ReminderTimeNotSet=Not set the reminder time!
 TaskCancelled=Task cancelled
 CopyingObjectsTypeNotProvided=Copying of objects of this type is not provided!
 ObjectWithIDNotFound=Object ID ''{0}'' not found! It is possible that it was removed from the database.
+TaskIsDone=The task is done
+TaskIsAssigned=The task is assigned
+Task\u0421anceled=Task canceled
+ReportIsNotFilled=The report is not filled!
+NoteRemoved=Note removed
