Начато создание шаблонов процессов

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -903,3 +903,10 @@ ProcessExecutionControl=Process execution control
 Initiator=Initiator
 TermExecution=Term of execution
 ReportsExe=Execution reports
+TaskIsAssigned=The task is assigned
+TaskIsDone=The task is done
+Task\u0421anceled=Task canceled
+LoadFromTemlate=Load from temlate
+SaveAsTemlate=Save as temlate
+NameTemplate=The name of the template
+ProcessTemplate=Process template
