создание шаблонов процессов

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -910,3 +910,8 @@ LoadFromTemlate=Load from temlate
 SaveAsTemlate=Save as temlate
 NameTemplate=The name of the template
 ProcessTemplate=Process template
+Template=Template
+CreateNewTemplate=Create new template
+Rewrite=Rewrite
+Templates=Templates
+TemplateSaved=Template saved
