--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -228,3 +228,4 @@ TaskIsAssigned=The task is assigned
 Task\u0421anceled=Task canceled
 ReportIsNotFilled=The report is not filled!
 NoteRemoved=Note removed
+TemplateSaved=Template saved!
