создание шаблонов процессов

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -229,3 +229,5 @@ Task\u0421anceled=Task canceled
 ReportIsNotFilled=The report is not filled!
 NoteRemoved=Note removed
 TemplateSaved=Template saved!
+ProcessDiagramWillBeCleared=The process diagram will be cleared!
+AgreeDocument=Agree the document!
