доработка штатных единиц

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -231,3 +231,4 @@ NoteRemoved=Note removed
 TemplateSaved=Template saved!
 ProcessDiagramWillBeCleared=The process diagram will be cleared!
 AgreeDocument=Agree the document!
+StaffAlreadyAssociated=Attention! The selected staff is already associated with another user! After saving the changes, the connection to the staff unit will be changed!
