доработка штатных единиц

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -920,3 +920,11 @@ Assistants=Assistants
 Always=Always
 Period=Period
 MainStaff=Main staff
+SelectingProcessTemplate=Selecting a process template
+LoadSchemeFromTemlate=Load process scheme from temlate
+SelectTemplate=Select template
+AddStart=Add 'Start' element
+Green=Green
+Red=Red
+Gray=Gray
+Color=Color
