--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -222,7 +222,7 @@ ReminderPeriodIncorrect=The reminder period is incorrect!
 ReminderTimeNotSet=Not set the reminder time!
 TaskCancelled=Task cancelled
 CopyingObjectsTypeNotProvided=Copying of objects of this type is not provided!
-ObjectWithIDNotFound=Object ID ''{0}'' not found! It is possible that it was removed from the database.
+ObjectWithIDNotFound=Object ''{0}'' with Id ''{1}'' not found! It is possible that it was removed from the database.
 TaskIsDone=The task is done
 TaskIsAssigned=The task is assigned
 Task\u0421anceled=Task canceled
@@ -232,3 +232,4 @@ TemplateSaved=Template saved!
 ProcessDiagramWillBeCleared=The process diagram will be cleared!
 AgreeDocument=Agree the document!
 StaffAlreadyAssociated=Attention! The selected staff is already associated with another user! After saving the changes, the connection to the staff unit will be changed!
+SchemeCanBeOnlyOneStartElement=There can be only one "Start" element in the process diagram!
