доработка шаблонов процессов

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -928,3 +928,13 @@ Green=Green
 Red=Red
 Gray=Gray
 Color=Color
+StandardTermConcorded=The standard term of concorded
+ConcordedDoc=Concorded document
+DragDropFileForNewProcess=Drag and drop the file here to create a new process
+SelectFileAndCreateProc=Select file and create process
+SelectFileAndSendConcorder=To select a file to send for approval
+DragDropFileForSendConcorded=Drag and drop the file here to submit it for approval
+ProcessTemplates=Process template
+ProcessTemplateSelector=Process template selector
+Main=Main
+CreateTemplate=Create template
