--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -9,7 +9,7 @@ ErrorFileOperation=The operation failed with a file
 ErrorFileDelete=Failed to remove the file
 FilesOperation=File operation
 FileIsDelete=File deleted
-Error=Error!
+Error=System error!
 ErrorSaveSettings=Failed to save current settings!
 ErrorLogin=Login is forbidden!
 ErrorLoginDetail=The entrance is not possible, because the the user has already logged in
@@ -22,7 +22,7 @@ ResolutionSavedProcessing=Resolution saved and queued for processing
 ErrorSQLConnectDetail=When connecting to SQL server error occurred. 
 ErrorSQLConnect=The SQL server is not available.
 ErrorCountLogin=Exceeded the number of login attempts to the system! The log will be locked for 1 minutes.
-ErrorSaveRecord=\u041f\u0440\u0438 \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u0438 \u0437\u0430\u043f\u0438\u0441\u0438 \u0432\u043e\u0437\u043d\u0438\u043a\u043b\u0430 \u043e\u0448\u0438\u0431\u043a\u0430
+ErrorSaveRecord=An error occurred while saving the record!
 Warning=Warning!
 InfoFolderIsModerated=The selected folder is moderated
 InfoCreateDocInFolder=The document will be displayed in the folder only after it is processed by the server system ESCOM.BPM
@@ -233,3 +233,5 @@ ProcessDiagramWillBeCleared=The process diagram will be cleared!
 AgreeDocument=Agree the document!
 StaffAlreadyAssociated=Attention! The selected staff is already associated with another user! After saving the changes, the connection to the staff unit will be changed!
 SchemeCanBeOnlyOneStartElement=There can be only one "Start" element in the process diagram!
+NoDefaultUserFolderSpecified=The default folder is not set for the user!
+DoNotSpecifyTypeProcess=Do not specify the process!
