доработка шаблонов процессов

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -938,3 +938,4 @@ ProcessTemplates=Process template
 ProcessTemplateSelector=Process template selector
 Main=Main
 CreateTemplate=Create template
+MainTemplate=Main template
