--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -235,3 +235,4 @@ StaffAlreadyAssociated=Attention! The selected staff is already associated with 
 SchemeCanBeOnlyOneStartElement=There can be only one "Start" element in the process diagram!
 NoDefaultUserFolderSpecified=The default folder is not set for the user!
 DoNotSpecifyTypeProcess=Do not specify the process!
+OneTemplateShouldBeMain=At least one template should be 'Main'!
