доработка шаблонов процессов

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -236,3 +236,4 @@ SchemeCanBeOnlyOneStartElement=There can be only one "Start" element in the proc
 NoDefaultUserFolderSpecified=The default folder is not set for the user!
 DoNotSpecifyTypeProcess=Do not specify the process!
 OneTemplateShouldBeMain=At least one template should be 'Main'!
+FolderUsedInUsers=Folder ''{0}'' used in 'Users'
