доработка шаблонов процессов

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -58,7 +58,7 @@ RegistrationError=Registration error!
 NUMERATOR_NO_SET=Numerator not set!
 DOCTYPE_NO_SET=Document type is not set!
 DOCDATE_NO_SET=Document date is not set!
-REGNUMBER_IS_DUBLICATE=REGNUMBER_IS_DUBLICATE
+REGNUMBER_IS_DUBLICATE=Document ''{0}'' number ''{1}'' already exists in the database!
 ErrorShowItemCard=Error show item card!
 ObjectIsExsist=Object ''{0}'' exsist in database! ID of an existing object {1}
 LogonSystem=Log on to the system
