отправка документа на согласование

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -939,3 +939,8 @@ ProcessTemplateSelector=Process template selector
 Main=Main
 CreateTemplate=Create template
 MainTemplate=Main template
+AddDocFromFile=Add document from file
+AddDocument=Add document
+AddExistingDocument=Add an existing document
+DeleteFromList=Delete from list
+NumberShort=#
