--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -237,3 +237,4 @@ NoDefaultUserFolderSpecified=The default folder is not set for the user!
 DoNotSpecifyTypeProcess=Do not specify the process!
 OneTemplateShouldBeMain=At least one template should be 'Main'!
 FolderUsedInUsers=Folder ''{0}'' used in 'Users'
+DocumentWillBeSavedAndClosed=To create a process, the document is saved and closed
