отправка документа на согласование

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -944,3 +944,7 @@ AddDocument=Add document
 AddExistingDocument=Add an existing document
 DeleteFromList=Delete from list
 NumberShort=#
+ChangeDocumentStateTo=Change the document state to:
+AddDocumentStatus=Add document status:
+ColorSchemeOn=The color scheme on
+CreateProcess=Create process
