--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -238,3 +238,9 @@ DoNotSpecifyTypeProcess=Do not specify the process!
 OneTemplateShouldBeMain=At least one template should be 'Main'!
 FolderUsedInUsers=Folder ''{0}'' used in 'Users'
 DocumentWillBeSavedAndClosed=To create a process, the document is saved and closed
+StatusProcessRouteNotFound=The status specified in the process route was not found in the database!
+DragDropDocumentCreateProcess=Drag and drop the document to create a process of the specified view
+DisplaysDocsForRunningProcesses=The log displays documents for which there are processes ''{0}'' in progress
+DisplaysObjectsSelectedSearche=The log displays the objects selected by the searche conditions
+DisplaysObjectsSelectedFilter=The log displays the objects selected by the filter ''{0}''
+DisplaysObjectsRelatedTo=The log displays objects related to ''{0}''
