информация об открытом журнале

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -508,10 +508,10 @@ ReplaceItemInObjects=Replace this object in all objects where it is used:
 ReplaceItemOn=To replace on:
 ValueReplace=The value to replace
 Replace=Replace
-UsesIn=Uses in
+UsesIn=Object uses in
 All=All
 CheckUncheck=Check all/Uncheck all
-CheckObjectNotSet=Check for this object is not set
+CheckObjectNotSet=Check for dependencies for this object is not set!
 RightForGroup=Rights for group
 RightForUser=Rights for user
 GroupName=Name group
