--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -948,3 +948,6 @@ ChangeDocumentStateTo=Change the document state to:
 AddDocumentStatus=Add document status:
 ColorSchemeOn=The color scheme on
 CreateProcess=Create process
+AddTimer=Add 'Timer' element
+Timer=Timer
+ProcessModel=Process model
