Доработка таймера процесса

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -399,7 +399,7 @@ DateLogin=Date login
 CopyURL=Copy URL
 GetURL=Get URL
 URL=URL
-PageNotFound=Error! Page not found!
+PageNotFound=Page not found!
 DownloadDoc=Download document
 SettigsObject=Setting object
 ExplorerStates=Explorer states
