Доработка таймера процесса

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -951,3 +951,5 @@ CreateProcess=Create process
 AddTimer=Add 'Timer' element
 Timer=Timer
 ProcessModel=Process model
+in=in
+OnInit=On initialization
