кнопка закрытия форм

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -953,3 +953,5 @@ Timer=Timer
 ProcessModel=Process model
 in=in
 OnInit=On initialization
+FolderIsNotSelected=Folder is not selected!
+InFolder=in the folder
