--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -955,3 +955,4 @@ in=in
 OnInit=On initialization
 FolderIsNotSelected=Folder is not selected!
 InFolder=in the folder
+OpenInNewPage=Open in the new page
