доработка просмотра документов и дефолтные размеры форм

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -501,7 +501,7 @@ ObjectSaved=Object saved
 StatusesSelector=Statuses selector
 SelectChecked=Select checked items
 ObjectMoveInTrash=Object move to trash
-PlacesDocStorage=Places document storage
+PlacesDocStorage=Places storage
 SaveAndClose=Save and close
 ShowInFolder=Show in folder
 ReplaceItemInObjects=Replace this object in all objects where it is used:
@@ -953,6 +953,10 @@ Timer=Timer
 ProcessModel=Process model
 in=in
 OnInit=On initialization
-FolderIsNotSelected=Folder is not selected!
+FolderIsNotSelected=Folder is not selected
 InFolder=in the folder
 OpenInNewPage=Open in the new page
+GroupIsNotSelected=Group is not selected
+Structure=Structure
+OrganizationOrDivisionNotSelected=No organization or division selected
+OurApologies=Our apologies!
