--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -244,3 +244,4 @@ DisplaysDocsForRunningProcesses=The log displays documents for which there are p
 DisplaysObjectsSelectedSearche=The log displays the objects selected by the searche conditions
 DisplaysObjectsSelectedFilter=The log displays the objects selected by the filter ''{0}''
 DisplaysObjectsRelatedTo=The log displays objects related to ''{0}''
+PossibleErroralreadyFixed=It is possible that this error has already been fixed by us and you only need to update the software!
